	PR c/85318 	* c-decl.c (check_for_loop_decls): Add -Wc90-c99-compat warning about 	for loop initial declarations.

* gcc.dg/Wc90-c99-compat-10.c: New test.
	* gcc.dg/Wc90-c99-compat-11.c: New test.
	* gcc.dg/Wc90-c99-compat-12.c: New test.
	* gcc.dg/Wc90-c99-compat-9.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@261293 138bc75d-0d04-0410-961f-82ee72b054a4